--- a/css/media-query.css
+++ b/css/media-query.css
@@ -48,7 +48,7 @@ a {
     position: fixed;
     width: 100%;
     left: -100%;
-    transition: left 1400ms;
+    transition: left 400ms;
 }
 .main-menu-block {
   height: 100vh;
@@ -56,8 +56,9 @@ a {
   list-style: none;
   text-align: center;
   width: 100%;
-  left: -100%;
-  transition: left 1400ms;
+  left: 0%;
+  position: fixed;
+  transition: left 400ms;
 }
 .item-style {
   display: block;
