--- a/css/menu-subitems.css
+++ b/css/menu-subitems.css
@@ -6,6 +6,7 @@
   nav {
     background-color: rgb(0, 0, 0);
     height: 70px;
+    width: 100%;
   }
   nav ul {
     background-color: rgb(0, 0, 0);
@@ -22,9 +23,7 @@
     text-align: center;
     position: relative;
   }
-  nav > ul {
-    margin-left: 40px;
-  }
+
   ul li {
     position: relative;
   }
@@ -53,8 +52,10 @@
     left: 100%;
     top: 0;
   }
-  i {
-    margin-left: 5px;
+  nav>ul>li>ul>li:hover a #f {
+    rotate: 90deg;
+  }
+  #f {
     transition: rotate 0.5s;
-    color: rgb(255, 255, 255);
+    margin-left: 5px;
   }
