--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,63 @@
 * {
-    background-color: black;
-    color: aliceblue
-1}
+    margin: 0;
+    padding: 0;
+}
+.img-fondo {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -90;
+}
 ul {
+    color: white;
+    list-style: none;
+}
+.titulo {
+    text-align: center;
     color: white;
 }
 h1 {
     text-align: center;
-    font-size: 5em;
-    color: rgba(229, 77, 77, 0.832);
+    font-size: 2em;
+    color: white;
 }
 h2 {
     text-align: center;
     font-size: 2em;
-    color: rgb(229, 77, 77, 0.832);
+    color: white;
 }
 h3 {
     text-align: center;
     font-size: 2em;
-    color: rgb(229, 77, 77, 0.832);
+    color: white;
 }
 h4 {
     text-align: center;
     font-size: 2em;
-    color: rgb(229, 77, 77, 0.832);
+    color: white;
 }
 a {
     color: white;
+    font-size: 1em;
+    text-decoration: none;
+    padding: 15px 40px 18px 20px;
+    display: inline-block;
 }
+a:hover {
+    cursor: pointer;
+    background-color: rgb(62, 50, 50);
+}
+/* .hamburguer {   
+    background-color: black;
+    display: flex;
+    align-items: center;
+    width: 180px;
+    top: 0;
+    height: 60px;
+    z-index: 2;
+}
+.menu-bar{
+    color: rgb(255, 255, 255);
+    font-size: 2em;
+}
+ */
