--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -40,6 +40,36 @@ h2 {
     display: flex;
     justify-content: space-around;
 }
+.box-8 {
+    display: flex;
+    justify-content: space-evenly;
+}
+.box-9 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+.box-10 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.box-height-box-11 {
+    width: 400px;
+    height: 300px;
+    background-color: #ffffff;
+    padding: 10px;
+}
+.box-22 {
+    width: 30px;
+    background-color: #fcbc03;
+    margin-right: 10px;
+    display: inline-block;
+}
+.box-height {
+    height: 500px;
+    gap: 70px;
+}
 .box-gen {
     background-color: #fcbc03;
     width: 250px;
