--- a/css/maquetacion.css
+++ b/css/maquetacion.css
@@ -1,81 +1,212 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 header {
-    background-color: rgb(206, 152, 71);
+    background-color: darkcyan;
     width: 100%;
     height: 100px;
     display: grid;
-    grid-template: "logo  menu" 100px /
-                    150px 1fr;
+    grid-template: "logo menu" 100px /
+        150px 1fr;
 }
+
+
 .logo {
     grid-area: logo;
-    background-color: rgb(244, 202, 144);
     width: 100%;
     height: 100%;
+    background-color: rgb(255, 255, 255);
+}
+.img-logo {
+    width: 55%;
+    height: 80px;
 }
 .menu {
     grid-area: menu;
-    background-color: rgb(245, 151, 19);
-    height: 100%;
+    background-color: rgb(255, 255, 255);
     width: 100%;
-    
+    height: 100%;
 }
+
 .main-contents {
     width: 100%;
     height: 600px;
+    /*     gap: 20px; */
     column-gap: 80px;
     row-gap: 40px;
     display: grid;
-    grid-template: "img-principal img-principal img-principal img-principal  img-principal" 600px
-                   "empty-left    article-1     article-2     article-3      empty-right"   500px
-                   "empty-left    article-4     article-5     article-6      empty-right"   500px /
-                    1fr           350px         350px         350px          1fr;
+    grid-template: "img-principal img-principal img-principal  img-principal img-principal" auto "empty-left  article-1   article-2  article-3  empty-right" 500px "empty-left  article-4   article-5  article-6  empty-right" 500px /
+        1fr 350px 350px 350px 1fr;
 }
+
+.img-fondo-grande {
+    width: auto;
+    height: 600px;
+}
+
+.img-fondo {
+    width: 100%;
+    height: 350px;
+}
+
 .img-principal {
     grid-area: img-principal;
     width: 100%;
-    height: 100%;
-    background-color: rgb(137, 93, 36);
+    height: 600px;
 }
+
 .article {
-    width: 100%;
+    width: 350px;
     height: 350px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(255, 255, 255);
 }
+
 .article-1 {
     grid-area: article-1;
 }
+
 .article-2 {
     grid-area: article-2;
 }
+
 .article-3 {
     grid-area: article-3;
 }
+
 .article-4 {
     grid-area: article-4;
 }
+
 .article-5 {
     grid-area: article-5;
 }
+
 .article-6 {
     grid-area: article-6;
 }
+
 .style-box {
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2em;
     font-weight: 900;
 }
+
 .style-img-article {
     height: 350px;
 }
+
 .style-texto-article {
     line-height: 1.5em;
     text-align: justify;
+    color: rgb(0, 0, 0);
+}
+    
+@media screen and (max-width:1390px) {
+    .main-contents {
+        display: grid;
+        grid-template: "img-principal img-principal img-principal  img-principal" auto
+            "empty-left  article-1   article-2  empty-right" 500px "empty-left  article-3   article-4  empty-right" 500px "empty-left  article-5   article-6    empty-right" 500px /
+            1fr 350px 350px 1fr;
+    }
+
+    .img-fondo-grande {
+        width: 100%;
+        height: 100%;
+    }
+
+    .img-principal {
+
+        height: 500px;
+
+    }
+}
+
+@media screen and (max-width:960px) {
+    .main-contents {
+        display: grid;
+        grid-template: "img-principal img-principal img-principal " auto
+            "empty-left  article-1     empty-right" 500px "empty-left  article-2     empty-right" 500px "empty-left  article-3     empty-right" 500px "empty-left  article-4     empty-right" 500px "empty-left  article-5     empty-right" 500px "empty-left  article-6     empty-right" 500px /
+            1fr 300px 1fr;
+    }
+.article {
+ width:100%;
+}
+    .img-principal {
+
+        height: 290px;
+
+    }
+}
+
+.main-nav {
+    background-color:rgb(64, 64, 64) ;
+    height: 100px;
+    width: 100%;
+    font-size: 1.7em;
+    font-family:'Poppins', sans-serif ;
+    font-weight: 700;
+}
+.main-menu {
+    list-style: none;
+    text-align: right;
+}
+.item-style{
+    padding: 40px 30px 28px 30px;
+   display: inline-block;
+}
+.item-style:hover {
+    cursor: pointer;
+    background-color: rgb(110,110,110);
+}
+a {
+   text-decoration: none;
+   color: rgb(0, 0, 0);
+}
+.menu-bar {
+    display: none;
+}
+/* media query*/
+@media only screen and (max-width: 1500px) {
+      .main-menu {
+        height: 100vh;
+        color: transparent;
+        list-style: none;
+        text-align: center;
+        position: fixed;
+        width: 50%;
+        left: -100%;
+        transition: left 1800ms;
+
+      }
+      .main-menu-block {
+        height: 100vh;
+        color: rgba(218, 222, 218, 0.2);
+        list-style: none;
+        text-align: left; 
+        position: fixed;
+        width: 50%;
+        left: 0;
+        transition: left 500ms;
+      }
+      .item-style {
+        display: block;
+        border-bottom: 1px solid rgb( 225, 225, 225,.2);
+      }
+      .menu-bar {
+        position: relative;
+        display: inline-block;
+        color: rgb(0, 0, 0);
+        padding-top: 10px;
+        margin-left: 230px;
+        font-size: 2em;
+     }
+     .menu-bar:hover {
+        cursor: pointer;
+     }
 }
