--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,23 @@ footer{
     text-align: center;
 }
 
+/* IMAGENES Y FOTOS */
+/* .box-dir {
+    width: 100%;
+    height: 100%;
+    border: 3px solid rgb(240,240,240, 2);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    background-color: rgb(240,240,240, 2);
+}
+.box-dir:hover {
+    border: 3px solid rgb(240,240,240, 2);
+} */
+
 /* SECCION RESPONSIVE */
 @media screen and (max-width:1180px){
     .inicio{
