--- a/css/foto1.css
+++ b/css/foto1.css
@@ -1,3 +1,8 @@
+/* *{
+ padding: 0;
+ margin: 0;
+}
+
 .box-dir {
     width: 100%;
     height: 100%;
@@ -12,4 +17,36 @@
 }
 .box-dir:hover {
     border: 3px solid rgb(240,240,240, 2);
+} */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; /* Asegura que el padding y el borde se incluyan en el ancho y alto */
+}
+
+html, body {
+    height: 100%;
+}
+
+.box-dir {
+    width: 100vw; 
+    height: 100vh; 
+    border: 3px solid rgba(240, 240, 240, 0.2);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    background-color: rgba(240, 240, 240, 0.2);
+}
+
+.box-dir img {
+    width: 100%; /* Asegura que la imagen ocupe el 100% del contenedor */
+    border-radius: 20px; /* Puedes aplicar el borde alrededor de la imagen si lo deseas */
+}
+
+.box-dir:hover {
+    border: 3px solid rgba(240, 240, 240, 0.2);
 }
